fixtures/invalid/07-key-dependency-missing-why/input.anatomy
anatomy_version = "0.1"

description = "key_dependencies[0] omits required why."

[identity]
fingerprint = "00000000000000000000"

[identity.stack]
id = "rust"
hash = "00000"

[identity.form]
id = "cli-tool"
hash = "00000"

[identity.domain]
id = "web-publishing"
hash = "00000"

[identity.function]
id = "markdown-to-static-html"
hash = "00000"

[[substance.key_dependencies]]
name = "tokio"

[generated]
at     = 2026-05-05T14:31:00Z
by     = "anatomy-cli@0.0.1"
model  = "none"
schema = "https://anatomy.dev/spec/0.1/schema.json"
